syntax = "proto3";

package rest;

option go_package = ".;rest";

// 评论状态枚举
enum CommentStatus {
  COMMENT_STATUS_UNSPECIFIED = 0;
  COMMENT_STATUS_PENDING = 1;     // 待审核
  COMMENT_STATUS_APPROVED = 2;    // 已通过
  COMMENT_STATUS_REJECTED = 3;    // 已拒绝
  COMMENT_STATUS_DELETED = 4;     // 已删除
}

// 对象类型枚举（评论可以针对不同类型的对象）
enum CommentObjectType {
  COMMENT_OBJECT_TYPE_UNSPECIFIED = 0;
  COMMENT_OBJECT_TYPE_POST = 1;        // 帖子
  COMMENT_OBJECT_TYPE_ARTICLE = 2;     // 文章
  COMMENT_OBJECT_TYPE_VIDEO = 3;       // 视频
  COMMENT_OBJECT_TYPE_PRODUCT = 4;     // 商品
}

// 评论信息
message Comment {
  int64 id = 1;
  int64 object_id = 2;                 // 被评论的对象ID
  CommentObjectType object_type = 3;   // 被评论的对象类型
  int64 user_id = 4;                   // 评论用户ID
  string user_name = 5;                // 评论用户名（冗余字段，便于显示）
  string user_avatar = 6;              // 评论用户头像（冗余字段）
  string content = 7;                  // 评论内容
  int64 parent_id = 8;                 // 父评论ID（0表示顶级评论）
  int64 root_id = 9;                   // 根评论ID（用于快速定位评论树）
  int64 reply_to_user_id = 10;         // 回复的用户ID
  string reply_to_user_name = 11;      // 回复的用户名
  CommentStatus status = 12;           // 评论状态
  int32 like_count = 13;               // 点赞数
  int32 reply_count = 14;              // 回复数
  bool is_pinned = 15;                 // 是否置顶
  bool is_hot = 16;                    // 是否热门
  string ip_address = 17;              // IP地址
  string user_agent = 18;              // 用户代理
  string created_at = 19;
  string updated_at = 20;
}

// 创建评论请求
message CreateCommentRequest {
  int64 object_id = 1;
  CommentObjectType object_type = 2;
  int64 user_id = 3;
  string user_name = 4;
  string user_avatar = 5;
  string content = 6;
  int64 parent_id = 7;                 // 可选，回复评论时使用
  int64 reply_to_user_id = 8;          // 可选，@某人时使用
  string reply_to_user_name = 9;       // 可选
  string ip_address = 10;
  string user_agent = 11;
}

// 创建评论响应
message CreateCommentResponse {
  bool success = 1;
  string message = 2;
  Comment comment = 3;
}

// 更新评论请求
message UpdateCommentRequest {
  int64 comment_id = 1;
  int64 user_id = 2;                   // 用于权限验证
  string content = 3;
}

// 更新评论响应
message UpdateCommentResponse {
  bool success = 1;
  string message = 2;
  Comment comment = 3;
}

// 删除评论请求
message DeleteCommentRequest {
  int64 comment_id = 1;
  int64 user_id = 2;                   // 用于权限验证
  bool is_admin = 3;                   // 是否管理员操作
}

// 删除评论响应
message DeleteCommentResponse {
  bool success = 1;
  string message = 2;
}

// 获取评论请求
message GetCommentRequest {
  int64 comment_id = 1;
}

// 获取评论响应
message GetCommentResponse {
  bool success = 1;
  string message = 2;
  Comment comment = 3;
}

// 获取评论列表请求
message GetCommentsRequest {
  int64 object_id = 1;
  CommentObjectType object_type = 2;
  int64 parent_id = 3;                 // 可选，获取某评论的回复
  string sort_by = 4;                  // 排序字段：time, hot, like
  string sort_order = 5;               // 排序方向：asc, desc
  int32 page = 6;
  int32 page_size = 7;
  bool include_replies = 8;            // 是否包含回复
  int32 max_reply_count = 9;           // 每个评论最多显示的回复数
}

// 获取评论列表响应
message GetCommentsResponse {
  bool success = 1;
  string message = 2;
  repeated Comment comments = 3;
  int64 total = 4;
  int32 page = 5;
  int32 page_size = 6;
}

// 获取用户评论请求
message GetUserCommentsRequest {
  int64 user_id = 1;
  CommentStatus status = 2;            // 可选，过滤状态
  int32 page = 3;
  int32 page_size = 4;
}

// 获取用户评论响应
message GetUserCommentsResponse {
  bool success = 1;
  string message = 2;
  repeated Comment comments = 3;
  int64 total = 4;
  int32 page = 5;
  int32 page_size = 6;
}

// 审核评论请求
message ModerateCommentRequest {
  int64 comment_id = 1;
  int64 moderator_id = 2;
  CommentStatus new_status = 3;
  string reason = 4;                   // 审核理由
}

// 审核评论响应
message ModerateCommentResponse {
  bool success = 1;
  string message = 2;
  Comment comment = 3;
}

// 置顶评论请求
message PinCommentRequest {
  int64 comment_id = 1;
  int64 operator_id = 2;
  bool is_pinned = 3;
}

// 置顶评论响应
message PinCommentResponse {
  bool success = 1;
  string message = 2;
}

// 获取评论统计请求
message GetCommentStatsRequest {
  int64 object_id = 1;
  CommentObjectType object_type = 2;
}

// 评论统计信息
message CommentStats {
  int64 object_id = 1;
  CommentObjectType object_type = 2;
  int64 total_count = 3;               // 总评论数
  int64 approved_count = 4;            // 已通过评论数
  int64 pending_count = 5;             // 待审核评论数
  int64 today_count = 6;               // 今日评论数
  int64 hot_count = 7;                 // 热门评论数
}

// 获取评论统计响应
message GetCommentStatsResponse {
  bool success = 1;
  string message = 2;
  CommentStats stats = 3;
}

// 批量获取评论统计请求
message GetBatchCommentStatsRequest {
  repeated int64 object_ids = 1;
  CommentObjectType object_type = 2;
}

// 批量获取评论统计响应
message GetBatchCommentStatsResponse {
  bool success = 1;
  string message = 2;
  repeated CommentStats stats = 3;
}

// 评论服务的gRPC接口
service CommentService {
  // 基础评论操作
  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse);
  rpc UpdateComment(UpdateCommentRequest) returns (UpdateCommentResponse);
  rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentResponse);
  rpc GetComment(GetCommentRequest) returns (GetCommentResponse);
  
  // 评论列表查询
  rpc GetComments(GetCommentsRequest) returns (GetCommentsResponse);
  rpc GetUserComments(GetUserCommentsRequest) returns (GetUserCommentsResponse);
  
  // 评论管理
  rpc ModerateComment(ModerateCommentRequest) returns (ModerateCommentResponse);
  rpc PinComment(PinCommentRequest) returns (PinCommentResponse);
  
  // 统计查询
  rpc GetCommentStats(GetCommentStatsRequest) returns (GetCommentStatsResponse);
  rpc GetBatchCommentStats(GetBatchCommentStatsRequest) returns (GetBatchCommentStatsResponse);
}
